--- a/Assets/Vortex/Editor/com.rhinox.open.vortex.editor.asmdef
+++ b/Assets/Vortex/Editor/com.rhinox.open.vortex.editor.asmdef
@@ -2,7 +2,11 @@
     "name": "com.rhinox.open.vortex.editor",
     "references": [
         "GUID:fc025ba4ac3997440926e87ec084af89",
-        "GUID:994bb3523438fcf44a56344a589ed083"
+        "GUID:7262f4696183b8841b571481b3ac0765",
+        "GUID:9f2912ef3cf155747b28c57f7136ff68",
+        "GUID:0ddc618087b4c494893b70a3bef42e02",
+        "GUID:994bb3523438fcf44a56344a589ed083",
+        "GUID:d06f234cedf03a546807d093bc1d736b"
     ],
     "includePlatforms": [
         "Editor"
