--- a/Assets/Vortex/package.json
+++ b/Assets/Vortex/package.json
@@ -13,6 +13,9 @@
   ],
   "category": "Unity",
   "dependencies": {
+    "com.rhinox.open.lightspeed": "1.1.3",
+    "com.rhinox.open.guiutils": "1.1.1",    
+    "com.rhinox.open.perceptor": "0.1.0"
   },
   "repository": {
     "type": "git",
