--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Package cache
+Packages/packages-lock.json
+
+# Symlinked Odin
+Packages/*odin-inspector/
+Packages/*.odininspector
