--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ Packages/packages-lock.json
 # Symlinked Odin
 Packages/*odin-inspector/
 Packages/*.odininspector
+Assets/Plugins/Sirenix/*
+Assets/Plugins/Sirenix.meta
