--- a/Assets/Vortex/com.rhinox.open.vortex.asmdef
+++ b/Assets/Vortex/com.rhinox.open.vortex.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "com.rhinox.open.perceptor",
         "com.rhinox.open.lightspeed",
-        "com.rhinox.open.guiutils.odin"
+        "com.rhinox.open.guiutils.odin",
+        "com.rhinox.open.guiutils.attributes"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
