--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.rhinox.open.guiutils": "1.1.1",
+    "com.rhinox.open.guiutils": "1.4.1",
     "com.rhinox.open.lightspeed": "1.1.3",
     "com.rhinox.open.perceptor": "0.1.0",
+    "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.collab-proxy": "1.8.0",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.11",
@@ -41,13 +42,16 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.praeclarum.sqlite-net": "1.7.33503"
   },
   "scopedRegistries": [
     {
       "name": "OpenUPM",
       "url": "https://package.openupm.com",
       "scopes": [
+        "com.openupm",
+        "com.praeclarum.sqlite-net",
         "com.rhinox.open"
       ]
     }
