--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.rhinox.open.guiutils": "1.4.1",
     "com.rhinox.open.lightspeed": "1.1.3",
     "com.rhinox.open.perceptor": "0.1.0",
+    "com.rhinox.open.utilities": "1.1.5",
     "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.collab-proxy": "1.8.0",
     "com.unity.ide.rider": "1.2.1",
