--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "com.rhinox.open.guiutils": "1.4.2",
-    "com.rhinox.open.lightspeed": "1.1.12",
+    "com.praeclarum.sqlite-net": "1.7.33503",
+    "com.rhinox.open.guiutils": "2.1.3",
+    "com.rhinox.open.lightspeed": "1.4.0",
     "com.rhinox.open.perceptor": "0.1.2",
-    "com.rhinox.open.utilities": "1.1.5",
-    "com.unity.nuget.newtonsoft-json": "2.0.0",
+    "com.rhinox.open.utilities": "1.3.2",
     "com.unity.collab-proxy": "1.8.0",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
@@ -43,8 +44,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.praeclarum.sqlite-net": "1.7.33503"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
