--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.rhinox.open.vortex",
   "displayName": "Vortex - Data Layer Integrator",
-  "version": "0.5.0-alpha.2",
+  "version": "0.5.0",
   "unity": "2019.4",
   "description": "Integration layer for Data backends with editor",
   "keywords": [
@@ -13,10 +13,10 @@
   ],
   "category": "Unity",
   "dependencies": {
-    "com.rhinox.open.lightspeed": "1.7.0",
-	"com.rhinox.open.utilities": "1.8.0",
-    "com.rhinox.open.guiutils": "2.12.0",
-    "com.rhinox.open.perceptor": "0.2.0"
+    "com.rhinox.open.lightspeed": "1.8.9",
+	"com.rhinox.open.utilities": "1.10.3",
+    "com.rhinox.open.guiutils": "3.0.2",
+    "com.rhinox.open.perceptor": "0.4.0"
   },
   "repository": {
     "type": "git",
