--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
     "com.praeclarum.sqlite-net": "1.7.33503",
-    "com.rhinox.open.guiutils": "2.12.0",
-    "com.rhinox.open.lightspeed": "1.7.0",
-    "com.rhinox.open.perceptor": "0.1.2",
-    "com.rhinox.open.utilities": "1.8.0",
-    "com.unity.collab-proxy": "1.8.0",
+    "com.rhinox.open.guiutils": "3.0.2",
+    "com.rhinox.open.lightspeed": "1.8.9",
+    "com.rhinox.open.perceptor": "0.4.0",
+    "com.rhinox.open.utilities": "1.10.2",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
@@ -43,8 +42,7 @@
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
-    "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.wind": "1.0.0"
   },
   "scopedRegistries": [
     {
